--- a/towns.html
+++ b/towns.html
@@ -18,6 +18,10 @@
     <option>Bourgas</option>
 </select>
 
+<div> 
+    <button id="btnShuffle">Shuffle</button> 
+</div>
+
 <div>
     <input type="text" id="townName" />
     <button id="btnDelete">Delete</button>
